--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sanitize-html": "^1.20.0",
-    "sequelize": "^4.43.0",
+    "sequelize": ">=5.3.0",
     "streamifier": "^0.1.1"
   }
 }
